tests/bugs/ignoring_type_branches_416.sy
A :: blob {
    a: int
}

B :: blob {
    a: int,
    b: int
}

f :: fn a:bool -> B
    if a do
        ret A { a: 0 }
    else do
        ret B { a: 0, b: 0 }
    end
end


start :: fn do
    a :: f' true
    a.a
end

// error: $Mismatch { .. }
